--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^1.0.5",
     "axios": "^0.25.0",
     "layout": "^2.2.0",
+    "lodash": "^4.17.21",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
