--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.5",
     "axios": "^0.25.0",
+    "heroicons-react": "^1.4.1",
     "layout": "^2.2.0",
     "lodash": "^4.17.21",
     "next": "12.0.8",
